--- a/styles/style.css
+++ b/styles/style.css
@@ -8,7 +8,7 @@
 .banner-container {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  /* justify-content: space-between; */
   background-color: rgba(229, 84, 115, 0.1);
   gap: 60px;
   padding-top: 50px;
@@ -37,7 +37,7 @@
   background: #e55473;
   color: white;
   font-size: 20px;
-  border: 0px;
+  border: none;
   padding: 20px 43px;
 }
 
