--- a/styles/style.css
+++ b/styles/style.css
@@ -8,7 +8,6 @@
 .banner-container {
   display: flex;
   align-items: center;
-  /* justify-content: space-between; */
   background-color: rgba(229, 84, 115, 0.1);
   gap: 60px;
   padding-top: 50px;
@@ -48,6 +47,45 @@
 }
 
 /*Featured Flowers section styles */
+
+.feature-flower-items {
+  display: flex;
+  justify-content: space-around;
+  align-items: end;
+}
+
+.description-feature-flower {
+  margin-top: 178px;
+}
+
+.title-featured-flower {
+  color: #272727;
+  text-align: center;
+  font-family: Lato;
+  font-size: 40px;
+  font-weight: 800;
+}
+
+.sub-title-featured-flower {
+  color: rgba(39, 39, 39, 0.6);
+  text-align: center;
+  font-family: Lato;
+  font-size: 18px;
+}
+
+.feature-flower-pic {
+  background-size: 1064px 538px;
+  border-radius: 300px 300px 0px 0px;
+  background: rgba(167, 33, 98, 0.15);
+}
+
+.feature-flower-items figure > figcaption {
+  color: #272727;
+  text-align: center;
+  font-size: 24px;
+  font-style: normal;
+  text-decoration-line: underline;
+}
 
 /*Delivery section styles*/
 
