--- a/styles/style.css
+++ b/styles/style.css
@@ -3,6 +3,7 @@
 * {
   margin: 0;
 }
+*
 
 /*Banner section styles */
 .banner-container {
@@ -89,12 +90,192 @@
 
 /*Delivery section styles*/
 
+.delivery-container {
+  display: flex;
+  justify-content: center;
+  border-radius: 8px;
+  background: rgba(39, 39, 39, 0.05);
+  margin: 240px;
+  padding-bottom: 87px;
+  padding-top: 87px;
+  padding-left: 175px;
+  padding-right: 175px;
+}
+
+.delivery-icon {
+  width: 88px;
+  height: 88px;
+}
+
 /*Hot deals section styles*/
 
+.hot-deal-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  border-radius: 8px;
+  background: rgba(229, 84, 115, 0.05);
+  /* padding-left: 400px;
+  padding-right: 429; */
+}
+
+.hot-deal-title {
+  color: #272727;
+  font-size: 40px;
+  font-weight: 800;
+}
+
+.hot-deal-subtitle {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+}
+
+.hot-deal-pic {
+  width: 318px;
+  height: 420px;
+}
+
+.hot-deal-btn {
+  border-radius: 8px;
+  background: #e55473;
+  padding: 20px 43px;
+  border: none;
+}
+
+.pink-text {
+  color: #e55473;
+}
+
 /*Insta section styles*/
+
+.insta {
+  margin-top: 120px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  margin-left: 240px;
+  margin-right: 240px;
+}
+
+.insta-texts {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 24px;
+}
+
+.insta-title {
+  color: #272727;
+  text-align: center;
+  font-family: Lato;
+  font-size: 40px;
+  font-weight: 800;
+}
+
+.insta-subtitle {
+  display: flex;
+  width: 580px;
+  flex-direction: column;
+  color: rgba(39, 39, 39, 0.6);
+  text-align: center;
+  font-size: 18px;
+  flex-shrink: 0;
+}
+
+.insta-images {
+  display: flex;
+  /* align-items: center; */
+  justify-content: space-around;
+  gap: 24px;
+}
+
+.insta-images img {
+  width: 342px;
+  height: 396px;
+}
 
 /*Customer Reviews section styles*/
 
 /*Subscribe section  styles*/
 
+.subscribe {
+  display: flex;
+  flex-direction: column;
+  background-image: url("../images/Rectangle\ 9.png");
+  background-size: cover;
+  margin-top: 128px;
+  align-items: center;
+}
+
+.subscribe-title {
+  color: #272727;
+  font-family: Lato;
+  font-size: 40px;
+  font-weight: 800;
+  margin-top: 120px;
+}
+
+.subscribe-sub-title {
+  color: rgba(39, 39, 39, 0.6);
+  font-family: Lato;
+  font-size: 18px;
+  font-weight: 400;
+  margin-top: 28px;
+  margin-bottom: 28px;
+}
+
+.subscribe-input {
+  display: flex;
+  align-items: center;
+  padding-bottom: 120px;
+}
+
+.email-box {
+  width: 700px;
+  height: 64px;
+  border: 0;
+  border-radius: 8px;
+  padding-left: 22px;
+}
+
+.submit-btn {
+  width: 150px;
+  height: 64px;
+  border-radius: 8px;
+  background: #e55473;
+  border: 0;
+}
+
 /*Footer section styles */
+
+.footer {
+  background: #111010;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 128px;
+  padding: 128px;
+}
+
+.footer-title {
+  color: white;
+  font-family: Lato;
+  font-size: 48px;
+  font-weight: 800;
+}
+
+.footer-sub-title {
+  color: rgba(255, 255, 255, 0.9);
+  text-align: center;
+  font-family: Lato;
+  font-size: 18px;
+}
+.copyright {
+  color: rgba(255, 255, 255, 0.4);
+  text-align: center;
+  font-family: Lato;
+  font-size: 14px;
+  font-weight: 400;
+}
