--- a/styles/style.css
+++ b/styles/style.css
@@ -1,8 +1,8 @@
-/* Global styles */
-
-* {
+Global styles * {
   margin: 0;
+  padding: 0;
 }
+
 *
 
 /*Banner section styles */
@@ -76,8 +76,22 @@
 
 .feature-flower-pic {
   background-size: 1064px 538px;
+  background-position: center;
   border-radius: 300px 300px 0px 0px;
+}
+
+.pink-pic {
   background: rgba(167, 33, 98, 0.15);
+}
+
+.red-pic {
+  background: rgba(5, 151, 160, 0.15);
+  padding-top: 80px;
+  padding-left: 0px;
+}
+
+.yellow-pic {
+  background: rgba(71, 125, 17, 0.15);
 }
 
 .feature-flower-items figure > figcaption {
@@ -93,18 +107,28 @@
 .delivery-container {
   display: flex;
   justify-content: center;
+  gap: 100px;
   border-radius: 8px;
   background: rgba(39, 39, 39, 0.05);
   margin: 240px;
   padding-bottom: 87px;
   padding-top: 87px;
-  padding-left: 175px;
-  padding-right: 175px;
+  padding-left: 155px;
+  padding-right: 155px;
 }
 
 .delivery-icon {
   width: 88px;
   height: 88px;
+}
+
+.delivery-icon-caption {
+  color: rgba(39, 39, 39, 0.8);
+  text-align: center;
+  font-family: Lato;
+  font-size: 24px;
+  font-weight: 600;
+  line-height: 35px;
 }
 
 /*Hot deals section styles*/
@@ -115,6 +139,7 @@
   justify-content: space-around;
   border-radius: 8px;
   background: rgba(229, 84, 115, 0.05);
+  margin-top: 100px;
   /* padding-left: 400px;
   padding-right: 429; */
 }
@@ -137,6 +162,9 @@
 }
 
 .hot-deal-btn {
+  color: white;
+  font-size: 20px;
+  font-weight: 700;
   border-radius: 8px;
   background: #e55473;
   padding: 20px 43px;
@@ -149,21 +177,18 @@
 
 /*Insta section styles*/
 
-.insta {
+/* .insta {
   margin-top: 120px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
-  margin-left: 240px;
-  margin-right: 240px;
-}
+} */
 
 .insta-texts {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 24px;
 }
 
 .insta-title {
@@ -172,6 +197,7 @@
   font-family: Lato;
   font-size: 40px;
   font-weight: 800;
+  margin-bottom: 0px;
 }
 
 .insta-subtitle {
@@ -181,19 +207,20 @@
   color: rgba(39, 39, 39, 0.6);
   text-align: center;
   font-size: 18px;
-  flex-shrink: 0;
 }
 
 .insta-images {
   display: flex;
-  /* align-items: center; */
+  align-items: center;
   justify-content: space-around;
   gap: 24px;
+  margin-left: 240px;
+  margin-right: 240px;
 }
 
-.insta-images img {
-  width: 342px;
-  height: 396px;
+.insta-img {
+  width: 220px;
+  height: 255px;
 }
 
 /*Customer Reviews section styles*/
@@ -241,6 +268,11 @@
 }
 
 .submit-btn {
+  color: #fff;
+  font-family: Lato;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 700;
   width: 150px;
   height: 64px;
   border-radius: 8px;
