review section added

--- a/styles/style.css
+++ b/styles/style.css
@@ -92,6 +92,8 @@ Global styles * {
 
 .yellow-pic {
   background: rgba(71, 125, 17, 0.15);
+  width: 300px;
+  height: 450px;
 }
 
 .feature-flower-items figure > figcaption {
@@ -100,35 +102,6 @@ Global styles * {
   font-size: 24px;
   font-style: normal;
   text-decoration-line: underline;
-}
-
-/*Delivery section styles*/
-
-.delivery-container {
-  display: flex;
-  justify-content: center;
-  gap: 100px;
-  border-radius: 8px;
-  background: rgba(39, 39, 39, 0.05);
-  margin: 240px;
-  padding-bottom: 87px;
-  padding-top: 87px;
-  padding-left: 155px;
-  padding-right: 155px;
-}
-
-.delivery-icon {
-  width: 88px;
-  height: 88px;
-}
-
-.delivery-icon-caption {
-  color: rgba(39, 39, 39, 0.8);
-  text-align: center;
-  font-family: Lato;
-  font-size: 24px;
-  font-weight: 600;
-  line-height: 35px;
 }
 
 /*Hot deals section styles*/
@@ -177,14 +150,6 @@ Global styles * {
 
 /*Insta section styles*/
 
-/* .insta {
-  margin-top: 120px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-around;
-} */
-
 .insta-texts {
   display: flex;
   flex-direction: column;
@@ -224,6 +189,47 @@ Global styles * {
 }
 
 /*Customer Reviews section styles*/
+
+.review {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  gap: 64px;
+  margin: 100px 50px;
+  border: 2px solid #000;
+  border-radius: 10px;
+  padding: 20px;
+  background-color: #efebeb;
+}
+
+.review-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.review-tile {
+  color: #272727;
+  text-align: center;
+  font-family: Lato;
+  font-size: 40px;
+  font-weight: 800;
+  margin-top: 100px;
+}
+
+.client-img {
+  width: 200px;
+  height: 200px;
+}
+
+.quote {
+  justify-content: center;
+  padding: 24px;
+  align-items: center;
+  border: 2px solid rgb(25, 1, 9);
+  border-radius: 14px;
+  padding: 20px;
+}
 
 /*Subscribe section  styles*/
 
